--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "expense",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,15 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.8",
-    "next-offline": "^5.0.5",
-    "next-pwa": "^5.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "12.0.10",
+    "next-pwa": "^5.4.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.10",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
