--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,17 @@
 {
-    "theme_color": "#39a659",
-    "background_color": "#39a659",
+    "theme_color": "#3579f6",
+    "background_color": "#ffffff",
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
-    "name": "Expense Tracker",
-    "short_name": "Expense Tracker",
-    "description": "Expense Tracker is a simple expense tracking app",
+    "name": "Next-PWA",
+    "short_name": "Next-PWA",
+    "description": "A Demo for Next-PWA",
     "icons": [
         {
             "src": "/icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
+            "type": "image/png"
         },
         {
             "src": "/icon-256x256.png",
@@ -27,8 +26,7 @@
         {
             "src": "/icon-512x512.png",
             "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any maskable"
+            "type": "image/png"
         }
     ]
 }
